package.json for jitsu

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "faye-live-demo",
   "version": "1.0.0",
+  "subdomain": "faye-live-demo",
   "description": "Faye Backbone Collections Demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Troupe/faye-live-demo"
+  },
+  "engines" : {
+    "node" : "v0.8.x"
   },
   "keywords": [
     "backbonejs",
@@ -26,7 +30,6 @@
   "gitHead": "f43af291b04623cb1db92d9124758c0b96fbd39e",
   "dependencies": {
     "mongoose": "~3.6.11",
-    "express-resource": "~1.0.0",
     "faye": "~0.8.9",
     "baucis": "~0.4.3",
     "express": "~3.1.2"
